correct line-height on mobile

--- a/style.css
+++ b/style.css
@@ -1019,7 +1019,7 @@ a {
     }
 
     .inner-container__text {
-        line-height: normal;
+        line-height: 1.5;
         font-size: 15px;
     }
 
